[gd_scene load_steps=4 format=3 uid="uid://bkbgl0kh1ea68"]

[ext_resource type="Script" path="res://scenes/menu_scenes/options_menu_scene.gd" id="1_y17rh"]
[ext_resource type="FontFile" uid="uid://djxgyjhns20dt" path="res://scenes/menu_scenes/Fredoka-Bold.ttf" id="2_6gje5"]
[ext_resource type="PackedScene" uid="uid://4mscn1mgvscu" path="res://scenes/menu_scenes/action_remap_button.tscn" id="2_b48p7"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.991206)
script = ExtResource("1_y17rh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -331.0
offset_top = -197.0
offset_right = 331.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6gje5")
text = "Options"

[node name="OptionsPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelMargins" type="MarginContainer" parent="VBoxContainer/OptionsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="OptionScroller" type="ScrollContainer" parent="VBoxContainer/OptionsPanel/PanelMargins"]
layout_mode = 2

[node name="OptionMargins" type="MarginContainer" parent="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 8

[node name="OptionSettings" type="VBoxContainer" parent="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BrightnessLabel" type="Label" parent="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6gje5")
text = "Brightness"

[node name="BrightnessAdjustor" type="HBoxContainer" parent="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings"]
layout_mode = 2

[node name="Brightness" type="HSlider" parent="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings/BrightnessAdjustor"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="BrightnessValue" type="Label" parent="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings/BrightnessAdjustor"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6gje5")
text = " 50"

[node name="VolumeLabel" type="Label" parent="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6gje5")
text = "Volume"

[node name="VolumeAdjustor" type="HBoxContainer" parent="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings"]
layout_mode = 2

[node name="Volume" type="HSlider" parent="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings/VolumeAdjustor"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 70.0

[node name="VolumeValue" type="Label" parent="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings/VolumeAdjustor"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6gje5")
text = " 70"

[node name="Keybinds" type="Label" parent="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6gje5")
text = "Keybinds"

[node name="KeybindSettings" type="VBoxContainer" parent="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings"]
layout_mode = 2

[node name="ForwardsButton" parent="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings/KeybindSettings" instance=ExtResource("2_b48p7")]
layout_mode = 2

[node name="Reset Keybinds" type="Button" parent="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_6gje5")
text = "Reset Keybinds to Default"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_6gje5")
text = "Back"

[connection signal="value_changed" from="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings/BrightnessAdjustor/Brightness" to="." method="_on_brightness_value_changed"]
[connection signal="value_changed" from="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings/VolumeAdjustor/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="VBoxContainer/OptionsPanel/PanelMargins/OptionScroller/OptionMargins/OptionSettings/Reset Keybinds" to="." method="_on_reset_keybinds_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
